make subnet id optional for nodepools
* And rename "disc" --> "disk"
